--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,53 @@
-.content {
-    padding: 7rem 0;
-}
-.form-control {
-    border: none;
-    background: #f3f3f3;
+* {
+    padding: 0;
+    margin: 0;
 }
 
-.form-control:active,
-.form-control:focus {
+.wrapper {
+    margin: 130px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    align-items: center;
+
+}
+
+.btn_ {
+    background-color: rgb(234, 234, 234);
+    border: 1px solid darkgrey;
+    color: darkgray;
+    border-radius: 4px;
+    width: 100%;
+    height: 2rem;
+    align-content: left;
+    margin: 10px 0px;
+    padding: 6px;
+}
+
+.btn_:focus {
     outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border-color: #000;
-    background: #f3f3f3;
+    background-color: rgb(223, 223, 223);
+    border: 2px solid rgb(255, 116, 47);
+    color: rgb(45, 45, 45);
 }
 
-.col-form-label {
-    color: #000;
-}
-
-.btn,
-.form-control,
-.custom-select {
-    height: 50px;
-}
-
-.custom-select:active,
-.custom-select:focus {
-    outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border-color: #000;
-}
-
-.btn {
-    border: none;
-    border-radius: 4px !important;
-}
-
-.btn.btn-primary {
-    background: #000;
-    color: #fff;
-    padding: 15px 20px;
-}
-
-.btn:hover {
-    color: #fff;
-}
-
-.btn:active,
-.btn:focus {
-    outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-.form-group{
-    margin-bottom: 1rem;
-}
-#message {
-    resize: vertical;
-}
-
-.btn {
-width: 90%;
-height: 1.5cm;
-align-content: left;
-margin: 15px;
-}
-
-/* .container{
+.Sendbtm {
+    width: fit-content;
+    padding: 0.8rem;
+    margin-top: 10px;
     border-radius: 10px;
-    margin: 20px;
-    background-color: rgb(227, 227, 227);
-    padding: 30px;
-    max-width: auto;
-   margin: auto;
-} */
+    background-color: rgb(0, 0, 0);
+    color: rgb(254, 254, 254);
+    border: none;
+}
+
+.Sendbtm:hover {
+    background-color: green;
+}
+
+#message {
+    padding: 6px;
+    padding-top: 10px;
+}
