--- a/2. Carousal/style.css
+++ b/2. Carousal/style.css
@@ -27,7 +27,7 @@
     justify-content: center;
     margin: auto;
     display: block;
-    width: 90%;
+    width: 60%;
 }
 
 .card-body a:hover {
@@ -48,9 +48,12 @@
 .btnl {
     text-align: center;
     color: rgb(35, 35, 35);
-    background-color: rgb(255, 255, 255);
-    border-radius: 5px;
+    background: transparent;
+    /* background-color: rgb(255, 255, 255); */
+    /* border-radius: 5px; */
     border: 0;
+    outline: 0;
+    border-bottom: 1px solid black;
     padding: 10px;
     justify-content: center;
     margin: auto;
@@ -58,6 +61,10 @@
     width: 90%;
 }
 
+label {
+    padding-left: 30px;
+    font-weight: bold;
+}
 .btn {
     width: 90%;
     height: 1.5cm;
